--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
               <a href="./index.html" class="list navigation">Studio</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="list navigation">Portfolio</a>
+              <a href="./portfolio.html" class="list navigation current">Portfolio</a>
             </li>
             <li class="item">
               <a href="" class="list navigation">Contacts</a>
