--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a href="./portfolio.html" class="list navigation">Portfolio</a>
             </li>
             <li class="item">
-              <a href="" class="list navigation">Contacts</a>
+              <a href="./contact.html" class="list navigation">Contacts</a>
             </li>
           </ul>
         </nav>
