--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,9 @@
               <a href="./index.html" class="list navigation">Studio</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="list navigation current">Portfolio</a>
+              <a href="./portfolio.html" class="list navigation current"
+                >Portfolio</a
+              >
             </li>
             <li class="item">
               <a href="" class="list navigation">Contacts</a>
@@ -66,108 +68,190 @@
           </ul>
           <ul class="list example">
             <li class="item-example">
-              <img
-                class="example-img"
-                src="./images/BankApp.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  class="example-img"
+                  src="./images/BankApp.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                />
+                <div class="overlay-block">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-example">
                 <h2 class="subtitle">Banking App Interface Concept</h2>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="item-example">
-              <img
-                class="example-img"
-                src="./images/Payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  class="example-img"
+                  src="./images/Payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="overlay-block">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-example">
                 <h2 class="subtitle">Cashless Payment</h2>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="item-example">
-              <img
-                class="example-img"
-                src="./images/App.jpg"
-                alt="Meditation App"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  class="example-img"
+                  src="./images/App.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <div class="overlay-block">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-example">
                 <h2 class="subtitle">Meditation App</h2>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="item-example">
-              <img
-                class="example-img"
-                src="./images/TaxiService.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  class="example-img"
+                  src="./images/TaxiService.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <div class="overlay-block">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-example">
                 <h2 class="subtitle">Taxi Service</h2>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="item-example">
-              <img
-                class="example-img"
-                src="./images/Screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  class="example-img"
+                  src="./images/Screen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <div class="overlay-block">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-example">
                 <h2 class="subtitle">Screen Illustrations</h2>
                 <p class="text">Design</p>
               </div>
             </li>
             <li class="item-example">
-              <img
-                class="example-img"
-                src="./images/OnlineCourses.jpg"
-                alt="Online Courses"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  class="example-img"
+                  src="./images/OnlineCourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <div class="overlay-block">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-example">
                 <h2 class="subtitle">Online Courses</h2>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="item-example">
-              <img
-                class="example-img"
-                src="./images/InstagramStoriesConcept.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  class="example-img"
+                  src="./images/InstagramStoriesConcept.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                />
+                <div class="overlay-block">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+
               <div class="text-example">
                 <h2 class="subtitle">Instagram Stories Concept</h2>
                 <p class="text">Design</p>
               </div>
             </li>
             <li class="item-example">
-              <img
-                class="example-img"
-                src="./images/OrganicFood.jpg"
-                alt="Organic Food"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  class="example-img"
+                  src="./images/OrganicFood.jpg"
+                  alt="Organic Food"
+                  width="360"
+                />
+                <div class="overlay-block">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-example">
                 <h2 class="subtitle">Organic Food</h2>
                 <p class="text">Web Site</p>
               </div>
             </li>
             <li class="item-example">
-              <img
-                class="example-img"
-                src="./images/Coffe.jpg"
-                alt="Fresh Coffee"
-                width="360"
-              />
+              <div class="overlay">
+                <img
+                  class="example-img"
+                  src="./images/Coffe.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                />
+                <div class="overlay-block">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="text-example">
                 <h2 class="subtitle">Fresh Coffee</h2>
                 <p class="text">Web Site</p>
