--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,14 @@
   </head>
 
   <body>
-    <div class="contact-div"></div>
+    <!-- <div class="contact-div"></div> -->
+    <form>
+      <label for="phone">Phone number</label>
+      <input type="tel" id="phone" placeholder="+380" />
+      <label for="Html">Html</label>
+      <input type="checkbox" name="Html" id="Html" />
+      <input type="range" class="range-slider" min="0" max="100" value="50">
+
+    </form>
   </body>
 </html>
