--- a/portfolio.html
+++ b/portfolio.html
@@ -334,6 +334,25 @@
             </ul>
           </div>
         </div>
+        <div class="footer-form">
+          <p class="text-social-media">Subscribe</p>
+          <form class="form-footer">
+            <input
+              class="footer-input"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="E-mail"
+            />
+            <label for="email"></label>
+            <button type="submit" class="btn-subsc">
+              Subscribe
+              <svg class="btn-icon">
+                <use href="./images/icon-send.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
