--- a/index.html
+++ b/index.html
@@ -518,15 +518,97 @@
             </ul>
           </div>
         </div>
+        <div class="footer-form">
+          <p class="text-social-media">Subscribe</p>
+          <form class="form-footer">
+            <input
+              class="footer-input"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="E-mail"
+            />
+            <label for="email"></label>
+            <button type="submit" class="btn-subsc">
+              Subscribe
+              <svg class="btn-icon">
+                <use href="./images/icon-send.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hiidden" data-modal>
       <div class="modal">
         <button type="button" class="btn-close" data-modal-close>
           <svg width="8px" height="8px">
             <use href="./images/symbol-defs.svg#icon-close-black"></use>
           </svg>
         </button>
+        <form autocomplete="off">
+          <p class="title-modal">
+            Leave your contacts and we will call you back
+          </p>
+
+          <div class="modal-field">
+            <label for="name" class="text-label" autocomplete="off">Name</label>
+            <div class="block-label">
+              <input
+                type="text"
+                id="name"
+                name="name"
+                class="modal-input"
+                required
+              />
+              <svg width="18" height="24" class="icon-modal">
+                <use href="./images/modal-icon.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label for="phone" class="text-label" autocomplete="off">Phone</label>
+            <div class="block-label">
+              <input
+                type="tel"
+                id="phone"
+                name="phone"
+                class="modal-input"
+                required
+              />
+              <svg width="18" height="24" class="icon-modal">
+                <use href="./images/modal-icon.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label for="email" class="text-label" autocomplete="off">Email</label>
+            <div class="block-label">
+              <input
+                type="email"
+                id="email"
+                name="email"
+                class="modal-input"
+                required
+              />
+              <svg width="18" height="24" class="icon-modal">
+                <use href="./images/modal-icon.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+
+          <label for="comment" class="text-label">Comment</label>
+          <textarea
+            name="comment"
+            id="comment"
+            placeholder="Text input"
+            class="modal-textarea"
+          ></textarea>
+
+          <button type="submit" class="modal-button">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
