--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
 
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./media.css" />
   </head>
   <body>
     <header class="header-section">
@@ -42,9 +43,99 @@
             >+11 (000) 111-11-11</a
           >
         </address>
+
+        <button type="button" class="btn-burger-menu">
+          <svg class="svg-burger-menu">
+            <use
+              href="./images/menu-burger.svg#icon-charm_menu-hamburger"
+              class="img-burger-menu"
+            ></use>
+          </svg>
+        </button>
+      </div>
+      <div class="burger-menu">
+        <div>
+          <ul class="list-burger nav">
+            <li class="item">
+              <a href="./index.html" class="list navigation current">Studio</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="list navigation">Portfolio</a>
+            </li>
+            <li class="item">
+              <a href="./contact.html" class="list navigation">Contacts</a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <address class="addres-burger">
+            <a href="mailto:info@devstudio.com" class="list contact"
+              >info@devstudio.com</a
+            >
+            <a href="tel:+110001111111" class="list contact"
+              >+11 (000) 111-11-11</a
+            >
+          </address>
+          <div class="social-icon">
+            <ul class="list">
+              <li class="item">
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Instagram"
+                  class="social-link"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a
+                  href="https://www.twitter.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Twitter"
+                  class="social-link"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a
+                  href="https://www.facebook.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Facebook"
+                  class="social-link"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item">
+                <a
+                  href="https://www.linkedin.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="LinkedIn"
+                  class="social-link"
+                >
+                  <svg width="16" height="16">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
-    <main>
+    <!-- <main>
       <section class="hero-section section">
         <div class="container">
           <h1 class="hero title">Effective Solutions for Your Business</h1>
@@ -444,8 +535,8 @@
           </ul>
         </div>
       </section>
-    </main>
-    <footer class="footer-section">
+    </main> -->
+    <!-- <footer class="footer-section">
       <div class="container footer">
         <div>
           <a href="./index.html" class="list"
@@ -538,8 +629,8 @@
           </form>
         </div>
       </div>
-    </footer>
-    <div class="backdrop is-hidden" data-modal>
+    </footer> -->
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="btn-close" data-modal-close>
           <svg width="8px" height="8px">
@@ -635,7 +726,7 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
